<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017-2024 The LineageOS Project
     Copyright (C) 2024 PixelOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">System Update Service</string>
    <string name="display_name">System updates</string>

    <!-- Directory where the update files will be downloaded and stored.
         WARNING: The application can and will delete any unknown file. -->
    <string name="download_path" translatable="false">/data/lineageos_updates/</string>

    <!-- Directory where the downloads will be exported to.
         The path is relative to the root of the external storage.-->
    <string name="export_path" translatable="false">System updates/</string>

    <!--
        Optional placeholders replaced at runtime:
          {device} - Device name
          {type} - Build type
          {incr} - Incremental version
    -->
    <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/TheParasiteProject-Devices/releases/main/{device}/update.json</string>

    <string name="verification_failed_notification">Verification failed</string>
    <string name="verifying_download_notification">Verifying update</string>
    <string name="downloading_notification">Downloading</string>
    <string name="download_paused_notification">Download paused</string>
    <string name="download_paused_error_notification">Download error</string>
    <string name="download_completed_notification">Download completed</string>
    <string name="download_starting_notification">Starting download</string>
    <string name="update_failed_notification">Update failed</string>
    <string name="installation_suspended_notification">Installation suspended</string>

    <string name="new_updates_found_title">New updates</string>

    <string name="text_download_speed">%1$s, %2$s/s</string>

    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="suspend_button">Suspend</string>

    <string name="installing_update">Installing update package</string>
    <string name="installing_update_error">Install error</string>
    <string name="installing_update_finished">Update installed</string>
    <string name="finalizing_package">Finalizing package installation</string>
    <string name="preparing_ota_first_boot">Preparing for first boot</string>
    <string name="dialog_prepare_zip_message">Preliminary update preparation</string>
    <string name="dialog_battery_low_title">Low battery</string>
    <string name="dialog_battery_low_message_pct">The battery level is too low, you need at least <xliff:g id="percent_discharging">%1$d</xliff:g>%% of the battery to continue, <xliff:g id="percent_charging">%2$d</xliff:g>%% if charging.</string>
    <string name="dialog_scratch_mounted_message">
        <![CDATA[
        Please run the following commands and retry the update:\n
        • adb root\n
        • adb enable-verity\n
        • adb reboot
        ]]>
    </string>
    <string name="dialog_scratch_mounted_title">Cannot install update with OverlayFS mounted</string>

    <string name="reboot">Reboot</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_auto_updates_check">Automatic check for updates</string>
    <string name="menu_auto_updates_check_interval_daily">Once a day</string>
    <string name="menu_auto_updates_check_interval_weekly">Once a week</string>
    <string name="menu_auto_updates_check_interval_monthly">Once a month</string>
    <string name="menu_auto_updates_check_interval_never">Never</string>
    <string name="menu_auto_delete_updates">Delete updates</string>
    <string name="menu_delete_update">Delete</string>
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_export_update">Export update</string>
    <string name="menu_show_changelog">Show changelog</string>
    <string name="menu_changelog_url" translatable="false">https://github.com/TheParasiteProject-Devices/releases/blob/main/{device}/changelog.md</string>
    <string name="changelog_url" translatable="false">https://raw.githubusercontent.com/TheParasiteProject-Devices/releases/refs/heads/main/{device}/changelog.md</string>
    <string name="menu_ab_perf_mode">A/B performance mode</string>
    <string name="menu_update_recovery">Update recovery</string>

    <string name="auto_updates_check_summary">Enable to check for updates automatically once every 14 days.</string>
    <string name="ab_perf_mode_summary">Increase priority of the update process. Might influence normal usage when an update is in progress.</string>
    <string name="auto_delete_updates_summary">Automatically delete updates when installed.</string>
    <string name="update_recovery_summary">Enable to update recovery from the build automatically.</string>
    <string name="forced_update_recovery_summary">It is impossible to disable Lineage Recovery updates on this device.</string>

    <string name="snack_updates_check_failed">The update check failed. Please check your internet connection and try again later.</string>
    <string name="snack_download_failed">The download failed. Please check your internet connection and try again later.</string>
    <string name="snack_download_verification_failed">The update verification failed.</string>
    <string name="snack_download_verified">Download completed.</string>
    <string name="snack_update_not_installable">This update can\'t be installed on top of the current build.</string>

    <string name="header_android_version">Android version: <xliff:g example="7.1.2" id="version">%1$s</xliff:g></string>
    <string name="header_android_security_patch">Android security update: <xliff:g example="1" id="patch">%1$s</xliff:g></string>
    <string name="header_last_updates_check">Last successful check for update:\n<xliff:g example="1 January 1970" id="date">%1$s</xliff:g> (<xliff:g example="01:23" id="time">%2$s</xliff:g>)</string>

    <string name="list_build_version_date"><xliff:g id="brand" example="PixelOS">%1$s</xliff:g> <xliff:g example="15" id="version">%2$s</xliff:g> - <xliff:g example="July 11, 2017" id="date">%3$s</xliff:g></string>
    <string name="list_download_progress_newer"><xliff:g example="12.2" id="filesize_without_unit">%1$s</xliff:g> of <xliff:g example="310 MB" id="filesize_without_unit">%2$s</xliff:g></string>
    <string name="list_verifying_update">Verifying update</string>

    <string name="action_download">Download</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_reboot">Reboot</string>
    <string name="action_install">Install</string>
    <string name="action_info">Info</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <string name="confirm_delete_dialog_title">Delete file</string>
    <string name="confirm_delete_dialog_message">Delete the current update file?</string>

    <string name="apply_update_dialog_title">Apply update</string>
    <string name="apply_update_dialog_message">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will restart itself in recovery mode to install the update.\n\nNote: This feature requires a compatible Recovery or updates will need to be installed manually.</string>
    <string name="apply_update_dialog_message_ab">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will begin installing in the background.\n\nOnce completed, you will be prompted to reboot.</string>

    <string name="cancel_installation_dialog_message">Cancel the installation?</string>

    <string name="reboot_installation_dialog_message">Reboot to complete installation</string>

    <string name="label_download_url">Download URL</string>
    <string name="toast_download_url_copied">URL Copied</string>

    <string name="dialog_export_title">Exporting update</string>
    <string name="notification_export_success">Update exported</string>
    <string name="notification_export_fail">Export error</string>
    <string name="toast_already_exporting">Already exporting an update</string>
    <string name="toast_export_started">Export started</string>

    <plurals name="eta_seconds">
        <item quantity="one">1 second left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> seconds left</item>
    </plurals>
    <plurals name="eta_minutes">
        <item quantity="one">1 minute left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes left</item>
    </plurals>
    <plurals name="eta_hours">
        <item quantity="one">1 hour left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours left</item>
    </plurals>

    <string name="update_over_metered_network_info">Metered connection warning</string>
    <string name="update_over_metered_network_message">Downloading updates, over a cellular network, metered Wi-Fi, or while roaming may cause additional charges.</string>

    <string name="blocked_update_dialog_title">Update blocked</string>
    <string name="blocked_update_dialog_message">This update cannot be installed using the updater app.  Please read <xliff:g id="info_url">%1$s</xliff:g> for more information.</string>
    <string name="blocked_update_info_url" translatable="false">https://wiki.lineageos.org/devices/<xliff:g id="device_name">%1$s</xliff:g>/upgrade/</string>

    <string name="export_channel_title">Export completion</string>
    <string name="new_updates_channel_title">New updates</string>
    <string name="ongoing_channel_title">Ongoing downloads</string>
    <string name="update_failed_channel_title">Update failed</string>

    <string name="local_update_import">Local update</string>
    <string name="local_update_import_progress">Importing local update\u2026</string>
    <string name="local_update_import_success">%1$s has been imported. Do you want to install it?</string>
    <string name="local_update_import_failure">Failed to import local update</string>
    <string name="local_update_import_install">Install</string>
    <string name="local_update_name">Local update</string>

    <string name="check_for_update">Check for update</string>
    <string name="check_for_update_failed">Failed to check for update</string>
    <string name="system_up_to_date">Your system is up to date</string>
    <string name="system_update_available">System update available</string>

    <string name="checking_for_update">Checking for system update\u2026</string>
    <string name="system_update_downloading">Downloading system update</string>
    <string name="system_update_downloading_paused">Download paused</string>
    <string name="system_update_installing">Installing system update</string>
    <string name="system_update_verifying">Verifying system update</string>
    <string name="local_update_installing">Installing local update</string>
    <string name="system_update_suspended">Installation suspended</string>

    <string name="general_header">General</string>

</resources>
